--- a/index.html
+++ b/index.html
@@ -46,6 +46,61 @@
         </div>
     </section>
 
+    <!--about session page-->
+
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./image/result (1).png" alt="shaka about image">
+        </div>
+        <div class="about-container">
+            <h3 >About <span>Me</span></h3>
+            <h3>software Engineer </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Vero illo nesciunt nostrum id ducimus dignissimos ab doloribus amet omnis ipsum. 
+                Magnam iusto eaque fuga quos quis nisi veniam quibusdam omnis!
+            </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+
+    <!-- service section design -->
+
+    <section class="service" id="service">
+        <h3 class="heading">Our <span>services</span></h3>
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Voluptatem rem accusantium perferendis excepturi neque perspiciatis illum deserunt sit praesentium quia.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxl-java'></i>
+                <h3>Software Engineering</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Voluptatem rem accusantium perferendis excepturi neque perspiciatis illum deserunt sit praesentium quia.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxl-spring-boot' ></i>
+                <h3>Software Testing</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Voluptatem rem accusantium perferendis excepturi neque perspiciatis illum deserunt sit praesentium quia.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
 </body>
